--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "generate:graphql": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
